# netbox-mcp

./: README.md  interactive_netbox_automation.py  pyproject.toml
docs/: CLAUDE.md  DEVELOPMENT-GUIDE.md
netbox_mcp/: _version.py  client.py  config.py  monitoring.py  openapi_generator.py  registry.py  server.py
netbox_mcp/prompts/: workflows.py
netbox_mcp/tools/: __init__.py
netbox_mcp/tools/circuits/: circuits.py  providers.py
netbox_mcp/tools/dcim/: __init__.py  bulk_cable_optimized.py  cables.py  device_type_components.py  devices.py  interface_mapping.py  manufacturers.py  modules.py  power_ports.py
netbox_mcp/tools/virtualization/: clusters.py  virtual_disks.py  virtual_machines.py  vm_interfaces.py
netbox_mcp/validation/: validators.py
tests/: test_cable_color_support.py
