[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-mcp"
version = "1.0.0"
description = "NetBox Read/Write MCP Server"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Deployment Team", email = "info@deployment-team.nl"}]
requires-python = ">=3.10"

dependencies = [
    "pynetbox==7.5.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "typing-extensions>=4.0.0",
    "mcp>=1.0.0",
    "cachetools>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",  # includes better server features
    "psutil>=5.9.0"
]

[project.scripts]
netbox-mcp = "netbox_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_mcp*"]

